<resources>
    <string name="app_name">SuperCalculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_point">,</string>
    <string name="_equal_sign">=</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="c">C</string>
    <string name="del">del</string>
    <string name="light_theme">Light_Theme</string>
    <string name="night_theme">Night_Theme</string>
    <string name="return_button">Return</string>
    <string name="settings_btn">Settings</string>
</resources>